--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <input type="text" required>
             </form>
             <ul id="todo-list">
-
+                <li id="item1"> </li>
             </ul>
             </div>
           </div>
